@@ -3606,15 +3606,15 @@ See also: @parent, ancestors, pfun()
 & NSPEMIT()
 & PROMPT()
 & NSPROMPT()
-  pemit(<object list|port number>, <message>)
-  nspemit(<object list|port number>, <message>)
+  pemit(<object list|port numbers>, <message>)
+  nspemit(<object list|port numbers>, <message>)
   prompt(<object list>, <message>)
   nsprompt(<object list>, <message>)
 
   With an <object list>, pemit() will send each object on the list a message,
   as per the @pemit/list command. It returns nothing. It respects page-locks
-  and HAVEN flags on players. With a <port number>, pemit() sends the
-  message to the specified port only, like @pemit/port.
+  and HAVEN flags on players. With <port numbers>, pemit() sends the
+  message to the specified ports only, like @pemit/port/list.
 
   nspemit() works like @nspemit/list.
 
